--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-#root {
+:root {
  --brand-color: #EF5F4C;
  --background-color: #FFFFFF;
  --surface-color: #F5F5F5;
@@ -26,4 +26,14 @@
   font: var(--text);
   color: var(--text-color-secondary);
   background-color: var(--background-color);
+ }
+
+ a {
+  text-decoration: none;
+  color: inherit;
+ }
+
+ a:hover {
+  color: var(--brand-color);
+  text-decoration: underline;
  }
