--- a/styles/global.css
+++ b/styles/global.css
@@ -37,3 +37,15 @@
   color: var(--brand-color);
   text-decoration: underline;
  }
+
+
+
+ .container {
+  padding-inline: 32px;
+  max-width: 1280px;
+  margin-inline: auto;
+ }
+
+ .bg-surface-color {
+  background-color: var(--surface-color);
+ }
