--- a/styles/nav.css
+++ b/styles/nav.css
@@ -12,12 +12,13 @@ nav ul {
   display: flex ;
   align-items: center;
   padding-block: 8px;
- gap: 20px;
+  gap: 24px;
 }
 
 nav ul li:last-child img {
  
   width: 40px;
   height: 40px;
-  
+  object-fit: cover;
+  border-radius: 50%;
 }
