--- a/styles/nav.css
+++ b/styles/nav.css
@@ -3,19 +3,20 @@ nav {
   justify-content: space-between;
   align-items: center;
   line-height: 0;
-  padding: 20px 32px
+   padding: 20px;
+  
 }
 
 nav ul {
   list-style: none;
-  display: flex;
+  display: flex ;
   align-items: center;
   padding-block: 8px;
   gap: 24px;
 }
 
 nav ul li:last-child img {
-
+ 
   width: 40px;
   height: 40px;
   object-fit: cover;
