--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,7 @@ footer {
   display: flex;
   padding-block: 24px;
   gap: 24px;
+  font: 14px/1.5 var(--font-family);
 }
 
 footer span:nth-child(1) {
